--- a/assignment1.css
+++ b/assignment1.css
@@ -2,6 +2,7 @@
     background-color: #bc4f5e;
     border:10px double black;
     color: white;
+    margin: 5px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -33,6 +34,7 @@
     border: 10px double black;
     color: white;
     padding: 15px 32px;
+    margin: 5px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
@@ -49,10 +51,4 @@
     border: 10px double rgb(197, 163, 41);
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
     
-  }
-  
-   .bold {
-
-    font-weight:bold;
-
   }
