--- a/assignment1.css
+++ b/assignment1.css
@@ -25,6 +25,7 @@
     background-color: #F0F0F0;
     color:black;
     text-align:left;
+    position: relative;
 
   }
   
@@ -34,7 +35,7 @@
     border: 10px double black;
     color: white;
     padding: 15px 32px;
-    margin: 10px 0px 10px;
+    margin: 10px 0px 10px 0px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
